setup/backstage/backstage-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  selector:
    app: backstage
  ports:
  - name: http
    port: 80
    targetPort: 7007
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - name: backstage
        image: docker pull ghcr.io/pawelwaj/backstage-humanitex/backstage:v3
        ports:
        - containerPort: 7007
        volumeMounts:
        - name: backstage-app-config
          mountPath: /app/app-config.yaml
          subPath: app-config.yaml
        readinessProbe:
          httpGet:
            path: /
            port: 7007
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: backstage-app-config
        configMap:
          name: backstage-app-config
